--- a/css/styles.css
+++ b/css/styles.css
@@ -145,14 +145,20 @@ li {
  /* Info section styles */
 
  .info {
+  /* Size properties */
+  height:500px;
 
+  /* Flex properties */
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
  }
 
  .infoheader {
     /* Border/margin/padding */
     /* text properties */
     text-align: center;
-    font-size: 36px;
+    font-size: 48px;
     font-weight: bolder;
     color: #1F2937;
     
@@ -169,8 +175,6 @@ li {
 
  .card {
    /* margin/border/padding */
-   /* border: 1px solid #eee;
-   box-shadow: 2px 4px 16px rgba(0,0,0,.06); */
 
    /* Flex properties */
    display: flex;
@@ -202,6 +206,13 @@ li {
    justify-content: center;
    align-items: center;
    
+
+ }
+
+ /* Card images are sized and centered */
+ .cardimage img{
+  height: 200px;
+  width: 200px;
 
  }
 
