--- a/css/styles.css
+++ b/css/styles.css
@@ -58,20 +58,10 @@ body {
 }
 
 /* Images should all be small, the same size */
-.header_links img{
-  height: 20px;
-  width: 20px;
+.smallImg{
+  height: 25px;
+  width: 25px;
 }
-
-
-
-li {
-
-    /* Flex container properties */
-    display: flex;
-    flex-direction: row;
-}
-
 
 
 /* Hero section styles*/
@@ -194,7 +184,7 @@ li {
    border-radius: 12px;
 
    /* Height/width properties */
-   height: 70%;
+   height: 100%;
 
    /* text properties */
    text-align:center;
@@ -207,7 +197,7 @@ li {
    align-items: center;
  }
 
- .cardimage:hover{
+  .cardstack a:hover{
   /* hovering shows outline and slight shading */
     border: 4px solid #77a6f1;
     background-color: #d0fcf8d7;
@@ -221,8 +211,6 @@ li {
  }
 
  .cardtext {
-   /* margin/border/padding */
-
    /* text properties */
    text-align: center;
    font: light italic #1f2937;
@@ -232,108 +220,53 @@ li {
 
 
  /* Styles for the Quote div */
- .testimonial {
+ .projects {
    /* Color properties */
    background-color: #E5E7EB;
-   /* Text properties */
+
+   /* Flex properties */
+   display:flex;
+   flex-direction: column;
+   gap: 60px;
 
 
 
  }
 
- .testTex {
-   /* Border/Margin/Padding */
-   padding-left: 25%;
-   padding-right:25%;
-   padding-top: 5%;
-   /* flex properties */
-   /* Color properties */
-   /* Text properties */
-   font-size: 36px;
-   color:  #1f2937;
-
-
+ .projectEntry{
+  /* Entries have defined sizes for flex */
  }
 
- .paragraph {
-   /* Border/Margin/Padding */
-   /* flex properties */
-   /* Color properties */
-   /* Text properties */
-   font-style: italic;
-
-   
-
- }
- 
- .author {
-   /* Border/Margin/Padding */
-   /* flex properties */
-   /* Color properties */
-   /* Text properties */
-   font-weight: bolder;
-   padding-left: 60%
-
- }
-
-
- /* Styles for the signup div */
-
- .signup {
-    /* Border/Margin/Padding */
-    padding-top: 3%;
-    padding-bottom: 3%;
-    /* flex properties */
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    /* Color properties */
-    /* Text properties */
-
- }
-
- .bluebox {
-  /* Border/Margin/Padding */
-  padding: 2%;
-  border-radius: 12px;
-  /* flex properties */
+ .projectHead{
+  /* Heading has a strong bold underline */
+  border-bottom: 2px solid rgb(71, 69, 69);
   display: flex;
-  flex-direction: row;
-  gap: 5%;
-  justify-content: center;
-  align-items: center;
-  /* Color properties */
-  background-color: #3882F6;
-  /* Text properties */
-  /* height/width */
-  width: 50%;
+  flex-direction:column;
+  gap: 10px;
+
 
  }
 
- .textbox b {
-    /* Border/Margin/Padding */
-   /* flex properties */
-   /* Color properties */
-   /* Text properties */
-   font-size: 24px;
-   color: #F9FAF8;
-   
+ /* Title language and link are descending in size */
+ .projectTitle{
+  /* Titles are large and bold */
+  font-size: 36px;
+  font-weight: bold;
+ }
+.projectLanguages{
+  font-size: 18px;
+  font-style: italic;
+}
 
+
+ .projectDesc{
+  list-style-type: circle;
+  font-size: 16px;
  }
 
- .textbox  p{
-   /* Border/Margin/Padding */
-
-   /* flex properties */
-   /* Color properties */
-   /* Text properties */
-   font-size: 18px;
-   color: #E5E7EB;
-
+ .projectDesc li{
+  padding-top: 3px;
  }
-
-
-
  /* The footer */
 
  footer {
