--- a/css/styles.css
+++ b/css/styles.css
@@ -34,28 +34,11 @@ body {
 .header {
     /* Visual */
     background-color: #1F2937;
-
-    /* Flex container properties */
-    display: flex;
-    flex:1;
-    flex-direction: row;
-    align-items: center;
-    justify-content: space-between;
-
-
-}
-
-.header_logo{
-    /* Text Color */
-    font-size: 32px;
-    font-weight: bolder;
-    color: #F9FAF8;
-
 }
 
 .header_links{
     /* Text Color */
-    font-size: 18px;
+    font-size: 24px;
     color: #E5E7EB;
 
     display: flex;
@@ -73,8 +56,7 @@ body {
 
   gap: 10px;
 
-  /* Text Color */
-  font-size: 32px;
+  /* Text Properties */
   font-weight: bolder;
   color: #F9FAF8;
   
@@ -86,7 +68,7 @@ body {
   width: 25px;
 }
 
-.smallImg:hover{
+.smallImg.clickable:hover{
   background-color: #77a6f1;
 }
 
@@ -106,6 +88,7 @@ body {
     justify-content: space-evenly;
 
     /* Element gap */
+    padding-top:60px;
 }
 
  .textContainer {
@@ -148,17 +131,16 @@ body {
  .picContainer {
     /* Flex properties */
     display: flex;
-    justify-content: center;
     align-items: center;
-    flex: 0.5;
+    justify-content: center;
 
     /* Coloring */
     /* background-color: #9a9b9e; */
  }
  .picContainer img{
   border-radius: 50%;
-  height: 300px;
-  width: 300px;
+  /* height: 300px;
+  width: 300px; */
  }
 
  /* Info section styles */
@@ -233,12 +215,6 @@ body {
     background-color: #d0fcf8d7;
  }
 
- /* Card images are sized and centered
- .cardimage img{
-  height: 200px;
-  width: 200px;
-
- } */
 
  .cardtext {
    /* text properties */
