--- a/css/styles.css
+++ b/css/styles.css
@@ -7,11 +7,12 @@ body {
     margin: 0px;
 }
 
+  
 #homeButton{
   display: none; 
   position: fixed; 
   bottom: 33%; 
-  right: 10px; 
+  right: 1%; 
   z-index: 99;
   border: none; 
   outline: none;
@@ -102,10 +103,7 @@ body {
     display: flex;
     flex-direction: column;
     gap: 10px;
- }
-
- .textContainer{
-  font-size: 18px;
+    font-size: 18px;
  }
 
  .biomain {
@@ -139,8 +137,8 @@ body {
  }
  .picContainer img{
   border-radius: 50%;
-  /* height: 300px;
-  width: 300px; */
+  height: 300px;
+  width: 300px;
  }
 
  /* Info section styles */
